ゲームの切り替えをバグなしに行えるようにした

--- a/user/assets/scss/_variable.scss
+++ b/user/assets/scss/_variable.scss
@@ -3,9 +3,10 @@ $pcM: 1440px; // PC M
 $pcS: 1024px; // PC S
 $tab: 850px; // タブレット
 $sp: 480px;  // スマホ
+$custom: 1300px;
 
 $sidebar-width-base: 242px;
-$sidebar-width-small: 80px;
+$sidebar-width-small: 120px;
 $bg-white: #fff;
 $header-height: 64px;
 $box-shadow-base: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
